[package]
name = "hashkit"
version = "0.1.0"
edition = "2021"
authors = ["Corum Collective LLC <contact@santh.io>"]
rust-version = "1.85"
license = "MIT"
description = "Unified hashing primitives for Santh performance crates, including FNV-1a, SplitMix64, WyHash, and BLAKE3 content hashing"
repository = "https://github.com/santhsecurity/hashkit"
homepage = "https://github.com/santhsecurity/hashkit"
documentation = "https://docs.rs/hashkit"
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
keywords = ["hash", "fnv", "splitmix", "wyhash", "blake3"]
categories = ["algorithms"]

[lib]
path = "src/lib.rs"

[[bench]]
name = "hash_bench"
harness = false

[lints.clippy]
unwrap_used = "deny"
todo = "deny"
unimplemented = "deny"
[dev-dependencies]
proptest = "1.5"

[dependencies]
blake3 = "1.8.4"
